Adding GSF7 and FUI 14.101.1