@@ -1,7 +1,7 @@
 ext.set("localDaogenVersion", "ALPHA")
 
 plugins {
-    kotlin("jvm") version "1.7.10"
+    kotlin("jvm") version "1.9.0"
     `maven-publish`
     id("global.genesis.build")
 }
@@ -26,11 +26,43 @@ subprojects  {
                 freeCompilerArgs = listOf("-Xjsr305=strict", "-Xjvm-default=all")
             }
         }
-        val java = "11"
+        val java = "17"
 
         compileKotlin {
             kotlinOptions { jvmTarget = java }
         }
+
+        //testing should use H2 mem db
+        test {
+            systemProperty("DbLayer", "SQL")
+            systemProperty("DbHost", "jdbc:h2:mem:test;DB_CLOSE_DELAY=-1")
+            systemProperty("DbQuotedIdentifiers", "true")
+            useJUnitPlatform()
+
+            // Add exports and opens so ChronicleQueue can continue working in JDK 17.
+            // More info in: https://chronicle.software/chronicle-support-java-17/
+            jvmArgs = jvmArgs!! + listOf(
+                "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
+                "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+                "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
+                "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+                "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED",
+                "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+                "--add-opens=java.base/java.io=ALL-UNNAMED",
+                "--add-opens=java.base/java.util=ALL-UNNAMED",
+                "--add-opens=java.base/java.nio=ALL-UNNAMED" // this one is opened for LMDB
+            )
+
+        } 
+
+        afterEvaluate {
+	        val copyDependencies = tasks.findByName("copyDependencies") ?: return@afterEvaluate
+
+            tasks.withType<Jar> {
+                dependsOn(copyDependencies)
+            }
+        }               
     }
 }
 
@@ -67,7 +99,7 @@ allprojects {
 
     kotlin {
         jvmToolchain {
-            (this as JavaToolchainSpec).languageVersion.set(JavaLanguageVersion.of(11))
+            (this as JavaToolchainSpec).languageVersion.set(JavaLanguageVersion.of(17))
         }
     }
     tasks.withType<Jar> {
@@ -76,7 +108,7 @@ allprojects {
 
     java {
         toolchain {
-            languageVersion.set(JavaLanguageVersion.of(11))
+            languageVersion.set(JavaLanguageVersion.of(17))
         }
     }
 
